[package]
name = "sha256_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
wasm-bindgen = { version = "0.2" }
wee_alloc = { version = "0.4" }


[dev-dependencies]
hex = { version = "0.4" }

[profile.release]
panic = 'abort'
codegen-units = 1
# or 'z' to optimize "aggressively" for size
# opt-level = 's'
lto = true
strip = true
